--- a/.github/workflows/build_Release.yml
+++ b/.github/workflows/build_Release.yml
@@ -20,6 +20,11 @@ jobs:
         https://github.com/azerothcore/mod-autobalance.git master
         https://github.com/azerothcore/mod-auto-revive.git master
       MODULES_DIR: azerothcore/modules
+      # 路径配置
+      INSTALL_DIR: azerothcore/install
+      BUILD_DIR: azerothcore/build
+      # 权限相关（需在仓库 Settings -> Secrets 中添加 RELEASE_TOKEN）
+      RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
     steps:
       - name: 检查架构（仅x86_64）
@@ -46,7 +51,8 @@ jobs:
             libreadline-dev \
             libncurses-dev \
             libboost-all-dev \
-            libcurl4-openssl-dev
+            libcurl4-openssl-dev \
+            gh  # 安装GitHub CLI（用于清理旧Releases）
 
       - name: 生成时间戳
         id: ts
@@ -96,10 +102,10 @@ jobs:
 
       - name: 配置CMake
         run: |
-          mkdir -p azerothcore/build && cd azerothcore/build
+          mkdir -p "$BUILD_DIR" && cd "$BUILD_DIR"
           cmake ../ \
             -DCMAKE_BUILD_TYPE="$BUILD_TYPE" \
-            -DCMAKE_INSTALL_PREFIX=../install \
+            -DCMAKE_INSTALL_PREFIX="$INSTALL_DIR" \
             -DCMAKE_C_COMPILER=clang \
             -DCMAKE_CXX_COMPILER=clang++ \
             -DBUILD_SHARED_LIBS=OFF \
@@ -110,7 +116,7 @@ jobs:
 
       - name: 编译安装
         run: |
-          cd azerothcore/build
+          cd "$BUILD_DIR"
           echo "🚀 开始编译（$(nproc)核心）"
           make -j$(nproc) && make install
 
@@ -119,7 +125,7 @@ jobs:
         run: |
           tar -czvf \
             acore-${{ steps.ts.outputs.utc }}.tar.gz \
-            -C azerothcore/install .
+            -C "$INSTALL_DIR" .
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
 
       - name: 保存产物到Artifact
@@ -132,30 +138,34 @@ jobs:
       - name: 上传产物到Releases
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: build-${{ steps.ts.outputs.utc }}  # 用时间戳作为标签名
-          name: 自动构建 ${{ steps.ts.outputs.sh }}  # 显示北京时间
+          token: ${{ env.RELEASE_TOKEN }}  # 使用环境变量中的权限令牌
+          tag_name: build-${{ steps.ts.outputs.utc }}
+          name: 自动构建 ${{ steps.ts.outputs.sh }}
           body: |
             ## 自动构建产物（${{ steps.ts.outputs.sh }}）
             - 核心分支：${{ env.ACORE_BRANCH }}
             - 成功集成模块：${{ steps.modules.outputs.success }}
             - 失败模块：${{ steps.modules.outputs.failure || '无' }}
-          files: ${{ steps.package.outputs.name }}  # 上传压缩包
+          files: ${{ steps.package.outputs.name }}
           draft: false
           prerelease: false
 
       - name: 清理旧Releases（保留最新3份）
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # 获取仓库所有Releases（按创建时间排序，最新的在前）
-          releases=$(gh api repos/{owner}/{repo}/releases | jq -r '.[] | .id')
-          # 转换为数组并跳过前3个（保留最新3份）
+          # 配置GitHub CLI使用指定令牌
+          echo "${{ env.RELEASE_TOKEN }}" | gh auth login --with-token
+          
+          # 获取仓库信息（从环境变量自动获取当前仓库）
+          repo_full_name=$(gh repo view --json nameWithOwner --jq .nameWithOwner)
+          
+          # 获取所有Releases ID（按创建时间排序，最新在前）
+          releases=$(gh api repos/$repo_full_name/releases | jq -r '.[] | .id')
           release_ids=($releases)
           echo "共找到 ${#release_ids[@]} 个Releases，保留最新3个，删除其余..."
           
-          # 从第4个开始删除（索引从0开始，从3开始删除）
+          # 从第4个开始删除
           for ((i=3; i<${#release_ids[@]}; i++)); do
             id=${release_ids[$i]}
             echo "删除旧Release: $id"
-            gh api -X DELETE repos/{owner}/{repo}/releases/$id
+            gh api -X DELETE repos/$repo_full_name/releases/$id
           done
