--- a/.github/workflows/build_Release.yml
+++ b/.github/workflows/build_Release.yml
@@ -108,7 +108,6 @@ jobs:
             -DCMAKE_INSTALL_PREFIX="$INSTALL_DIR" \
             -DCMAKE_C_COMPILER=clang \
             -DCMAKE_CXX_COMPILER=clang++ \
-            -DBUILD_SHARED_LIBS=OFF \
             -DWITH_WARNINGS=1 \
             -DTOOLS_BUILD=all \
             -DSCRIPTS=static \
@@ -147,7 +146,7 @@ jobs:
             - 核心分支：${{ env.ACORE_BRANCH }}
             - 集成模块：${{ steps.modules.outputs.success }}
             - 失败模块：${{ steps.modules.outputs.failure || '无' }}
-            - 数据文件：暂未提供 （map、mmap、dbc、vmap）
+            - 数据文件：暂未提供 （map、mmap、dbc、vmap、Cameras）
           files: ${{ steps.package.outputs.name }}
           draft: false
           prerelease: false
